--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -167,7 +167,7 @@ nav > a > img{
   max-height: 30vw;
 }
 #background-personal{
-  background: url(https://cdn.pixabay.com/photo/2015/05/31/10/54/coffee-791045_960_720.jpg);
+  background: url(/images/coffee-2306471.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -216,10 +216,11 @@ section{
   padding: 10px;
   width: 50vw;
   height: 350px;
+  background-color: burlywood;
   border: 5px #7e7878 solid;
   border-radius: 20px;
   overflow: auto;
-  // display: flex;
+  display: flex;
   // flex-wrap: wrap;
 }
 .btn-stuff > button{
@@ -237,11 +238,12 @@ section{
   text-shadow: #fff 2px 5px 6px;
   height: 65vh;
   border: solid 5px grey;
+  border-radius: 20px;
   box-shadow: -5px 5px 50px #000 ;
   font-size: 1rem;
   // align-self: flex-end;
   display: flex;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
   justify-content: center;
   
 }
