--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -221,7 +221,7 @@ section{
   border-radius: 20px;
   overflow: auto;
   display: flex;
-  // flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 .btn-stuff > button{
   background-color: rgb(179, 176, 176);
@@ -241,8 +241,9 @@ section{
   border-radius: 20px;
   box-shadow: -5px 5px 50px #000 ;
   font-size: 1rem;
-  // align-self: flex-end;
+  align-self: flex-end;
   display: flex;
+  flex-direction: column;
   // flex-wrap: wrap;
   justify-content: center;
   
