--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -46,8 +46,9 @@ a {
 
 nav{
   width: 100vw;
-  height: 5vh;
+  height: 7vh;
   padding-top: 5px;
+  font-size: 18px;
   display: flex;
   justify-content: space-between;
   text-decoration-style: none;
