--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,10 +24,10 @@
 
         {{!-- <button onclick="dropdown()" class="btn"></button> --}}
       <div id="myDrops" class="nav-links">
-      <a href="/signup">Sign In Here</a> |
+      <a href="/signup">Sign Up</a> |
       <a href="/user/page/{{theUser._id}}"> User Page </a> |
-      <a href="/login">Log Back In</a> |
-      <a href="/logout">logout</a> |
+      <a href="/login">Login</a> |
+      <a href="/logout">Logout</a> |
       </div>
   
     </nav>
